--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,21 @@
     <title></title>
   </head>
   <body>
-    <p>Welcome to chat app</p>
+    <p>Welcome to the chat app</p>
+
+    <script type="text/javascript" src="/socket.io/socket.io.js">
+    </script>
+    <script type="text/javascript">
+    //initiating the request from the client to the server and keep it open
+      var socket = io();
+    // listen on connect event
+      socket.on('connect', () => {
+        console.log('Connected to server');
+      })
+
+      socket.on('disconnect', () => {
+        console.log('Disconnected from server');
+      })
+    </script>
   </body>
 </html>
