--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,7 @@
 
     <script type="text/javascript" src="/socket.io/socket.io.js">
     </script>
-    <script type="text/javascript">
-    //initiating the request from the client to the server and keep it open
-      var socket = io();
-    // listen on connect event
-      socket.on('connect', () => {
-        console.log('Connected to server');
-      })
-
-      socket.on('disconnect', () => {
-        console.log('Disconnected from server');
-      })
+    <script src="/js/index.js" type="text/javascript">
     </script>
   </body>
 </html>
