--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,15 @@
   <body>
     <p>Welcome to the chat app</p>
 
-    <script type="text/javascript" src="/socket.io/socket.io.js">
-    </script>
-    <script src="/js/index.js" type="text/javascript">
-    </script>
+    <ol id="messages"></ol>
+
+    <form id="message-form" class="" >
+      <input name="message" type="text" placeholder="Message" />
+      <button>Send</button>
+    </form>
+
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
+    <script src="/js/index.js" type="text/javascript"></script>
   </body>
 </html>
