--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       <button>Send</button>
     </form>
 
+    <button id="send-location">Send Location</button>
+
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
     <script src="/js/index.js" type="text/javascript"></script>
