--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/styles.css">
     <title></title>
   </head>
-  <body>
-    <p>Welcome to the chat app</p>
+  <body class="chat">
+    <div class="chat__sidebar">
+      <h3>Users</h3>
+      <dir id="users"></dir>
+    </div>
 
-    <ol id="messages"></ol>
+    <div class="chat__main">
+      <ol id="messages" class="chat__messages"></ol>
+      <dir class="chat__footer">
+        <form id="message-form" class="">
+          <input name="message" type="text" placeholder="Message" autofocus autocomplete="off" />
+          <button id="send-message">Send</button>
+        </form>
+        <button id="send-location">Send Location</button>
+      </dir>
+  
 
-    <form id="message-form" class="" >
-      <input name="message" type="text" placeholder="Message" />
-      <button>Send</button>
-    </form>
+    </div>
 
-    <button id="send-location">Send Location</button>
 
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
