--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
+    <script src="/js/libs/moment.js" type="text/javascript"></script>
     <script src="/js/index.js" type="text/javascript"></script>
   </body>
 </html>
