--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,39 @@
         </form>
         <button id="send-location">Send Location</button>
       </dir>
-  
-
     </div>
+
+    <script id="message-template" type="text/template">
+      <li class="message">
+        <div class="message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class="message__body">
+          <p>{{text}}</p>
+        </div>
+      </li>
+    </script>
+
+    <script id="location-message-template" type="text/template">
+      <li class="message">
+        <div class="message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class="message__body">
+          <p>
+            <a target="_blank" href="{{url}}">My current location</a>
+          </p>
+        </div>
+      </li>
+    </script>
 
 
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
     <script src="/js/libs/moment.js" type="text/javascript"></script>
+    <script src="/js/libs/mustache.js" type="text/javascript"></script>
     <script src="/js/index.js" type="text/javascript"></script>
   </body>
 </html>
