--- a/public/index.html
+++ b/public/index.html
@@ -1,59 +1,30 @@
 <!DOCTYPE html>
-
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Join - Chat App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/styles.css">
-    <title></title>
-  </head>
-  <body class="chat">
-    <div class="chat__sidebar">
-      <h3>Users</h3>
-      <dir id="users"></dir>
-    </div>
-
-    <div class="chat__main">
-      <ol id="messages" class="chat__messages"></ol>
-      <dir class="chat__footer">
-        <form id="message-form" class="">
-          <input name="message" type="text" placeholder="Message" autofocus autocomplete="off" />
-          <button id="send-message">Send</button>
+</head>
+<body class="centered-form">
+    <div class="centered-form__form">
+        <form action="/chat.html">
+            <div class="form-field">
+                <h3>Join a Chat</h3>
+            </div>
+            <div class="form-field">
+                <label for="name">Display name</label>
+                <input type="text" name="name" autofocus />
+            </div>
+            <div class="form-field">
+                <label for="room">Room name</label>
+                <input type="text" name="room">
+            </div>
+            <div class="form-field">
+                <button>Join</button>
+            </div>
         </form>
-        <button id="send-location">Send Location</button>
-      </dir>
     </div>
-
-    <script id="message-template" type="text/template">
-      <li class="message">
-        <div class="message__title">
-          <h4>{{from}}</h4>
-          <span>{{createdAt}}</span>
-        </div>
-        <div class="message__body">
-          <p>{{text}}</p>
-        </div>
-      </li>
-    </script>
-
-    <script id="location-message-template" type="text/template">
-      <li class="message">
-        <div class="message__title">
-          <h4>{{from}}</h4>
-          <span>{{createdAt}}</span>
-        </div>
-        <div class="message__body">
-          <p>
-            <a target="_blank" href="{{url}}">My current location</a>
-          </p>
-        </div>
-      </li>
-    </script>
-
-
-    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-    <script src="/js/libs/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
-    <script src="/js/libs/moment.js" type="text/javascript"></script>
-    <script src="/js/libs/mustache.js" type="text/javascript"></script>
-    <script src="/js/index.js" type="text/javascript"></script>
-  </body>
+</body>
 </html>
