--- a/public/chat.html
+++ b/public/chat.html
@@ -55,6 +55,7 @@
     <script src="/js/libs/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
     <script src="/js/libs/moment.js" type="text/javascript"></script>
     <script src="/js/libs/mustache.js" type="text/javascript"></script>
+    <script src="/js/libs/deparam.js" type="text/javascript"></script>
     <script src="/js/chat.js" type="text/javascript"></script>
   </body>
 </html>
